# LaserXe

./: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.ai/: AnimationTab-refactoring-plan-react-hook-form.md  CanvasWorkspace-MasksTab-AuditLogTab-refactoring-plan-react-hook-form.md  PlanTab-refactoring-plan-react-hook-form.md  UI_session_summary.md  advanced-algorithm-diagnostic-guide.md  analytic-velocity-profile-implementation-plan.md  api-plan.md  conversation_summary_db_planning.md  db-plan.md  grid-algorithm-manual-test-checklist.md  grid-and-animation-fix-plan.md  grid-generator-implementation-plan.md  image-detail-view-implementation-plan.md  images-list-view-implementation-plan.md  instrukcja-uzytkowania.md  instrukcje generowania siatki.md  laserme-ui-design-implementation-plan.md  login-view-implementation-plan.md  next-steps-implementation.md  pico-migration-plan.md  plan-testow.md  prd.md  simple-vs-advanced-grid-algorithm-plan.md  succesful point and animation algorythm.md.txt  tech-stack  ui-plan.md  upload-image-view-implementation-plan.md  view-implementation-plan.md  working_lesion_spot_planner.txt  zgodnosc-algorytmu-z-instrukcja-siatki.md
.manuals/: XD-OEM.docx  XD-OEM_AI_Interface_Summary.txt
backend/: device_config.json  main.py  requirements.txt  start-api-8001.ps1  start-api.ps1
firmware/pico/: CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware/pico/src/: config.h  encoder.cpp  encoder.h  jsmn.c  jsmn.h  main.cpp  stepper.cpp  stepper.h  xda.cpp  xda.h
(+126 files in other folders)
